--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,10 @@
 
     <string name="Button1">My record</string>
     <string name="Button2">Other record</string>
-    <string name="Button3">Daily Report</string>
+    <string name="Button3">DAILY REPORT</string>
+    <string name="Button4">WEEKLY REPORT</string>
+    <string name="Button5">MONTHLY REPORT</string>
+    <string name="Button6">ANNUAL REPORT</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
