listview즐겨찾기임시

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="string6">거북목교정!페인랩이말하는교정이야기</string>
     <string name="string7">하루10분!전신자세교정</string>
     <string name="string8">어깨통증도수치료2부</string>
+    <string name="string9">스크랩된 영상이 없습니다.</string>
 
     <string name="sign_up">회원 가입</string>
     <string name="sign_in">로그인</string>
